docs/content/docs/v5/foundations/streaming.mdx
---
title: Streaming
description: Stream data in real time to clients for progress updates and incremental content delivery.
type: conceptual
summary: Stream data to clients in real time without waiting for workflow completion.
languageSwitcher:
  - ts
  - py
prerequisites:
  - /docs/foundations/workflows-and-steps
related:
  - /docs/api-reference/workflow/get-writable
  - /docs/api-reference/python/get-writable
  - /docs/ai/resumable-streams
---

Workflows can stream data to clients in real time without waiting for the entire workflow to complete. Clients can receive progress updates, AI-generated content, log messages, and other incremental data as workflows execute.

## Getting started

Every workflow run has a default writable stream that steps can write to. Data written to this stream becomes immediately available to clients consuming the workflow's output.

<LanguageContent value="ts">

```typescript title="workflows/simple-streaming.ts" lineNumbers
import { getWritable } from "workflow";

async function writeProgress(message: string) {
  "use step";

  // Steps can write to the run's default stream
  const writable = getWritable<string>(); // [!code highlight]
  const writer = writable.getWriter();
  await writer.write(message);
  writer.releaseLock();
}

export async function simpleStreamingWorkflow() {
  "use workflow";

  await writeProgress("Starting task...");
  await writeProgress("Processing data...");
  await writeProgress("Task complete!");
}
```

</LanguageContent>
<LanguageContent value="py">

```python title="app/workflows/simple_streaming.py" lineNumbers
from app.workflow import wf
from vercel.workflow import get_writable

@wf.step
async def write_progress(message: str):
    writable = get_writable()  # [!code highlight]
    await writable.write(message)

@wf.step
async def close_progress():
    await get_writable().close()

@wf.workflow
async def simple_streaming_workflow():
    await write_progress("Starting task...")
    await write_progress("Processing data...")
    await write_progress("Task complete!")
    await close_progress()
```

</LanguageContent>

### Consuming the stream

Use the `Run` object to consume the stream from your API route:

<LanguageContent value="ts">

```typescript title="app/api/stream/route.ts" lineNumbers
import { start } from "workflow/api";
import { simpleStreamingWorkflow } from "./workflows/simple-streaming";

export async function POST() {
  const run = await start(simpleStreamingWorkflow);

  // Return the readable stream to the client
  return new Response(run.readable, {
    headers: { "Content-Type": "text/plain" }
  });
}
```

</LanguageContent>
<LanguageContent value="py">

```python title="app/api/stream.py" lineNumbers
from starlette.responses import StreamingResponse

from app.workflows.simple_streaming import simple_streaming_workflow
from vercel import workflow

@app.post("/api/stream")
async def stream():
    run = await workflow.start(simple_streaming_workflow)

    async def body():
        async for message in run.readable():  # [!code highlight]
            yield f"{message}\n".encode()

    return StreamingResponse(body(), media_type="text/plain")
```

</LanguageContent>

When a client makes a request to this endpoint, they'll receive each message as it's written, without waiting for the workflow to complete.

### Avoiding function timeouts after client disconnects

<LanguageContent value="ts">

On Vercel, `run.readable` and `run.getReadable()` reconnect to Workflow's stream storage while the workflow is still running. By default, a client disconnect does not terminate the Vercel Function serving the stream. If a user closes the page or stops the request, the function can therefore keep reconnecting until it reaches its maximum duration and fails with `FUNCTION_INVOCATION_TIMEOUT`.

For streaming routes using the Node.js runtime, opt in to [request cancellation](https://vercel.com/docs/functions/functions-api-reference#enable-cancellation) in `vercel.json`:

```json filename="vercel.json"
{
  "functions": {
    "app/api/stream/route.ts": {
      "supportsCancellation": true
    }
  }
}
```

Replace the function path with the path or glob for your streaming route. When the downstream client disconnects, Vercel terminates the matching function invocation instead of leaving its stream reader running. The workflow run and its durable stream continue independently, so the client can reconnect through another route invocation later.

<Callout type="warn">
Cancellation applies to every function matching the configured path or glob, even if the route does not listen to `request.signal`. Any other work in that invocation which is not wrapped in [`waitUntil`](https://vercel.com/docs/functions/functions-api-reference/vercel-functions-package#waituntil) or [`after`](https://nextjs.org/docs/app/api-reference/functions/after) can be lost. Only enable it for routes that are safe to terminate when their client disconnects.
</Callout>

This setting prevents abandoned stream readers from consuming the rest of a function invocation. It does not extend the function's maximum duration. An actively connected streaming response can still reach the configured limit, at which point the client should reconnect to the durable stream.

</LanguageContent>
<LanguageContent value="py">

`run.readable()` reconnects to durable stream storage when its upstream connection drops. When the downstream client disconnects, stop iterating the generator according to your web framework's cancellation behavior. This closes only that reader; the workflow and its durable stream continue independently, and another request can reconnect with `start_index`.

</LanguageContent>

### Resuming streams from a specific point

<LanguageContent value="ts">

Use `run.getReadable({ startIndex })` to resume a stream from a specific position. This is useful for reconnecting after timeouts or network interruptions:

```typescript title="app/api/resume-stream/[runId]/route.ts" lineNumbers
import { getRun } from "workflow/api";

export async function GET(
  request: Request,
  { params }: { params: Promise<{ runId: string }> }
) {
  const { runId } = await params;
  const { searchParams } = new URL(request.url);

  // Client provides the last chunk index they received
  const startIndexParam = searchParams.get("startIndex"); // [!code highlight]
  const startIndex = startIndexParam ? parseInt(startIndexParam, 10) : undefined; // [!code highlight]

  const run = getRun(runId);
  const stream = run.getReadable({ startIndex }); // [!code highlight]

  return new Response(stream, {
    headers: { "Content-Type": "text/plain" }
  });
}
```

Clients can reconnect and continue receiving data from where they left off instead of restarting from the beginning.

`startIndex` also supports **negative values** to read relative to the end of the stream. For example, `startIndex: -5` starts 5 chunks before the current end. This is useful when you want to show the most recent output without reading the entire stream history.

On an active (not-yet-closed) stream, the negative index resolves relative to the chunk count at connection time; any chunks written afterward are still delivered normally.

{/* @skip-typecheck: incomplete code sample */}
```typescript
// Read only the last 10 chunks
const stream = run.getReadable({ startIndex: -10 });
```

If the absolute value exceeds the total number of chunks, reading starts from the beginning (the value is clamped to 0).

<Callout type="warn">
Because streams are live and continue receiving chunks, negative `startIndex` values resolve to different absolute positions on each call. Accurate pagination over a live stream requires cursor-based access, which is not yet supported. Keep this in mind when building clients that paginate over stream data.
</Callout>

</LanguageContent>
<LanguageContent value="py">

Pass `start_index` to `run.readable()` or `run.readable_bytes()` to resume from a specific chunk:

```python title="app/api/resume_stream.py" lineNumbers
from starlette.responses import StreamingResponse
from vercel.workflow import Run

@app.get("/api/resume-stream/{run_id}")
async def resume_stream(run_id: str, start_index: int = 0):
    run = Run(run_id)
    return StreamingResponse(
        run.readable_bytes(start_index=start_index),  # [!code highlight]
        media_type="application/octet-stream",
    )
```

A positive value resumes at that exact chunk and continues reconnecting if the upstream transport drops. A negative value reads relative to the current end—for example, `start_index=-10` reads the latest ten chunks—but is single-shot because its absolute position can change while the stream is live. Values before the start are clamped to zero.

</LanguageContent>

## Streams as data types

<LanguageContent value="ts">

[`ReadableStream`](https://developer.mozilla.org/en-US/docs/Web/API/ReadableStream) and [`WritableStream`](https://developer.mozilla.org/en-US/docs/Web/API/WritableStream) are standard Web Streams API types that Workflow SDK makes serializable. Workflow SDK lets you pass these standard types between functions while maintaining their streaming capabilities.

Unlike regular values that are fully serialized to the [event log](/docs/how-it-works/event-sourcing), streams maintain their streaming capabilities when passed between functions.

**Key properties:**

- Stream references can be passed between workflow and step functions
- Stream data flows directly without being stored in the event log
- Streams preserve their state across workflow suspension points

</LanguageContent>
<LanguageContent value="py">

Python uses serializable `WorkflowWritable` handles for durable output streams. A workflow can obtain a handle with `get_writable()` and pass it to steps; inside a step, the revived handle can write to the same stream. Pass a Pydantic model to `get_writable(type=Model)` or `run.readable(type=Model)` to encode, decode, and validate typed chunks. An annotation such as `WorkflowWritable[Model]` carries that type when a handle crosses a workflow or step boundary.

Unlike regular values that are fully serialized to the [event log](/docs/how-it-works/event-sourcing), only the stream reference crosses function boundaries. Chunks flow through durable stream storage instead of the event log. Arbitrary async iterables and file-like objects are not serializable stream types.

</LanguageContent>

<Callout type="info">
**How streams persist across workflow suspensions**

Persistent, resumable storage from the World implementation lets Workflow SDK streams maintain their state when workflows suspend and resume:

- **Vercel deployments**: Streams are backed by a performant Redis-based stream
- **Local development**: Stream chunks are stored in the filesystem
</Callout>

### Passing streams as arguments

<LanguageContent value="ts">

Because streams are serializable data types, you don't need to use [`getWritable()`](/docs/api-reference/workflow/get-writable). You can pass your own streams as arguments from outside a workflow into steps.

The following example passes a request body stream through a workflow to a step that processes it:

```typescript title="app/api/upload/route.ts" lineNumbers
import { start } from "workflow/api";
import { streamProcessingWorkflow } from "./workflows/streaming";

export async function POST(request: Request) {
  // Streams can be passed as workflow arguments
  const run = await start(streamProcessingWorkflow, [request.body]); // [!code highlight]
  await run.returnValue;

  return Response.json({ status: "complete" });
}
```

```typescript title="workflows/streaming.ts" lineNumbers
export async function streamProcessingWorkflow(
  inputStream: ReadableStream<Uint8Array> // [!code highlight]
) {
  "use workflow";

  // Workflow passes stream to step for processing
  const result = await processInputStream(inputStream); // [!code highlight]
  return { length: result.length };
}

async function processInputStream(input: ReadableStream<Uint8Array>) {
  "use step";

  // Step reads from the stream
  const chunks: Uint8Array[] = [];

  for await (const chunk of input) {
    chunks.push(chunk);
  }

  return Buffer.concat(chunks).toString("utf8");
}
```

</LanguageContent>
<LanguageContent value="py">

Pass a `WorkflowWritable` handle from a workflow to any step that needs to produce output:

```python title="app/workflows/streaming.py" lineNumbers
import pydantic

from app.workflow import wf
from vercel.workflow import WorkflowWritable, get_writable


class Progress(pydantic.BaseModel):
    item: str
    status: str


@wf.step
async def process_items(
    items: list[str],
    progress: WorkflowWritable[Progress],
):
    for item in items:
        await progress.write(Progress(item=item, status="complete"))
    await progress.close()

@wf.workflow
async def stream_processing_workflow(items: list[str]):
    progress = get_writable(type=Progress)  # Serializable typed handle
    await process_items(items, progress)  # Writable inside the step
```

Read and validate the typed chunks by passing the same model to `Run.readable()`:

```python title="app/api/progress.py" lineNumbers
from app.workflows.streaming import Progress
from vercel.workflow import Run

async def read_progress(run_id: str):
    run = Run(run_id)
    async for progress in run.readable(type=Progress):
        print(progress.item, progress.status)
```

Python does not serialize arbitrary request-body streams or async iterables as workflow arguments. Read an upload inside one step, or store it externally and pass a serializable reference such as a URL or object key.

</LanguageContent>

## Important limitation

<Callout type="info">
**Streams cannot be used directly in workflow context**

You cannot read from or write to streams directly within a workflow function. All stream operations must happen in step functions.
</Callout>

Workflow functions must be deterministic to support replay. Streams bypass the [event log](/docs/how-it-works/event-sourcing) for performance, so reading stream data in a workflow would break determinism because each replay could see different data. Requiring all stream operations to happen in steps ensures consistent behavior.

For more on determinism and replay, see [Workflows and Steps](/docs/foundations/workflows-and-steps).

<LanguageContent value="ts">

```typescript title="workflows/bad-example.ts" lineNumbers
import { getWritable } from "workflow";

export async function badWorkflow() {
  "use workflow";

  const writable = getWritable<string>();

  // Cannot read/write streams in workflow context
  const writer = writable.getWriter(); // [!code highlight]
  await writer.write("data"); // [!code highlight]
}
```

```typescript title="workflows/good-example.ts" lineNumbers
import { getWritable } from "workflow";

export async function goodWorkflow() {
  "use workflow";

  // Delegate stream operations to steps
  await writeToStream("data");
}

async function writeToStream(data: string) {
  "use step";

  // Stream operations must happen in steps
  const writable = getWritable<string>();
  const writer = writable.getWriter();
  await writer.write(data);
  writer.releaseLock();
}
```

</LanguageContent>
<LanguageContent value="py">

```python title="app/workflows/stream_examples.py" lineNumbers
from app.workflow import wf
from vercel.workflow import get_writable

@wf.workflow
async def bad_workflow():
    writable = get_writable()
    await writable.write("data")  # Cannot write in workflow context

@wf.step
async def write_to_stream(data: str):
    await get_writable().write(data)

@wf.workflow
async def good_workflow():
    await write_to_stream("data")  # Delegate I/O to a step
```

</LanguageContent>

## Namespaced streams

<LanguageContent value="ts">

Use `getWritable({ namespace: 'name' })` to create multiple independent streams for different types of data. This is useful when you want to separate logs, metrics, data outputs, or other distinct channels.

```typescript title="workflows/multi-stream.ts" lineNumbers
import { getWritable } from "workflow";

type LogEntry = { level: string; message: string };
type MetricEntry = { cpu: number; memory: number };

async function writeLogs() {
  "use step";

  const logs = getWritable<LogEntry>({ namespace: "logs" }); // [!code highlight]
  const writer = logs.getWriter();

  await writer.write({ level: "info", message: "Task started" });
  await writer.write({ level: "info", message: "Processing..." });

  writer.releaseLock();
}

async function writeMetrics() {
  "use step";

  const metrics = getWritable<MetricEntry>({ namespace: "metrics" }); // [!code highlight]
  const writer = metrics.getWriter();

  await writer.write({ cpu: 45, memory: 512 });
  await writer.write({ cpu: 52, memory: 520 });

  writer.releaseLock();
}

async function closeStreams() {
  "use step";

  await getWritable({ namespace: "logs" }).close();
  await getWritable({ namespace: "metrics" }).close();
}

export async function multiStreamWorkflow() {
  "use workflow";

  await writeLogs();
  await writeMetrics();
  await closeStreams();
}
```

</LanguageContent>
<LanguageContent value="py">

Pass `namespace` to create independent streams for logs, metrics, or other channels:

```python title="app/workflows/multi_stream.py" lineNumbers
from app.workflow import wf
from vercel.workflow import get_writable

@wf.step
async def write_outputs():
    logs = get_writable(namespace="logs")  # [!code highlight]
    metrics = get_writable(namespace="metrics")  # [!code highlight]

    await logs.write({"level": "info", "message": "Task started"})
    await metrics.write({"cpu": 45, "memory": 512})

    await logs.close()
    await metrics.close()

@wf.workflow
async def multi_stream_workflow():
    await write_outputs()
```

</LanguageContent>

### Consuming namespaced streams

<LanguageContent value="ts">

Use `run.getReadable({ namespace: 'name' })` to access specific streams:

```typescript title="app/api/multi-stream/route.ts" lineNumbers
import { start } from "workflow/api";
import { multiStreamWorkflow } from "./workflows/multi";

type LogEntry = { level: string; message: string };
type MetricEntry = { cpu: number; memory: number };

export async function POST(request: Request) {
  const run = await start(multiStreamWorkflow);

  // Access specific named streams // [!code highlight]
  const logs = run.getReadable<LogEntry>({ namespace: "logs" }); // [!code highlight]
  const metrics = run.getReadable<MetricEntry>({ namespace: "metrics" }); // [!code highlight]

  // Return the logs stream to the client
  return new Response(logs, {
    headers: { "Content-Type": "application/json" }
  });
}
```

</LanguageContent>
<LanguageContent value="py">

Pass the same namespace to `run.readable()`:

```python title="app/api/logs.py" lineNumbers
from vercel.workflow import Run

async def read_logs(run_id: str):
    run = Run(run_id)
    async for entry in run.readable(namespace="logs"):  # [!code highlight]
        print(entry)
```

</LanguageContent>

## Writing to another run's stream

<LanguageContent value="ts">

`getRun(runId).getWritable()` appends to a stream owned by another run. This lets short-lived runs contribute to a long-lived holder run's stream using only its ID.

```typescript title="workflows/turn.ts" lineNumbers
import { getRun } from "workflow/api";

type SessionEvent = { turn: number; text: string };

async function runTurn(holderRunId: string, turn: number) {
  "use step";

  const writable = getRun(holderRunId).getWritable<SessionEvent>(); // [!code highlight]
  const writer = writable.getWriter();

  await writer.write({ turn, text: "done" });
  writer.releaseLock(); // [!code highlight]
}
```

Pass `{ namespace: "name" }` to target a [namespaced stream](#namespaced-streams). The writable can also be forwarded through `start()` and into steps.

<Callout type="warn">
Contributors should call `releaseLock()`, which flushes pending writes. Calling `close()` closes the shared stream for every writer.
</Callout>

The API grants append access, not read access or additional authorization. The owning run controls the stream's lifecycle, and writes to an unknown run fail.

</LanguageContent>
<LanguageContent value="py">

The Python SDK does not currently expose a public API for opening another run's writable stream from only its run ID. Pass a `WorkflowWritable` handle through workflow and step arguments when multiple operations need to contribute to one stream.

</LanguageContent>

## Common patterns

### Progress updates for long-running tasks

Send incremental progress updates to keep users informed during lengthy workflows:

<LanguageContent value="ts">

```typescript title="workflows/batch-processing.ts" lineNumbers
import { getWritable, sleep } from "workflow";

type ProgressUpdate = {
  item: string;
  progress: number;
  status: string;
};

async function processItem(
  item: string,
  current: number,
  total: number
) {
  "use step";

  const writable = getWritable<ProgressUpdate>(); // [!code highlight]
  const writer = writable.getWriter();

  // Simulate processing
  await new Promise(resolve => setTimeout(resolve, 1000));

  // Send progress update // [!code highlight]
  await writer.write({ // [!code highlight]
    item, // [!code highlight]
    progress: Math.round((current / total) * 100), // [!code highlight]
    status: "processing" // [!code highlight]
  }); // [!code highlight]

  writer.releaseLock();
}

async function finalizeProgress() {
  "use step";

  await getWritable().close();
}

export async function batchProcessingWorkflow(items: string[]) {
  "use workflow";

  for (let i = 0; i < items.length; i++) {
    await processItem(items[i], i + 1, items.length);
    await sleep("1s");
  }

  await finalizeProgress();
}
```

</LanguageContent>
<LanguageContent value="py">

```python title="app/workflows/batch_processing.py" lineNumbers
from app.workflow import wf
from vercel import workflow
from vercel.workflow import get_writable

@wf.step
async def process_item(item: str, current: int, total: int):
    # ... process the item ...
    await get_writable().write({
        "item": item,
        "progress": round(current / total * 100),
        "status": "processing",
    })

@wf.step
async def finalize_progress():
    await get_writable().close()

@wf.workflow
async def batch_processing_workflow(items: list[str]):
    for current, item in enumerate(items, start=1):
        await process_item(item, current, len(items))
        await workflow.sleep(1)
    await finalize_progress()
```

</LanguageContent>

### Streaming AI responses with `WorkflowAgent`

<LanguageContent value="ts">

Stream AI-generated content using AI SDK's [`WorkflowAgent`](https://ai-sdk.dev/v7/docs/agents/workflow-agent#workflowagent) from `@ai-sdk/workflow`. The agent writes `ModelCallStreamPart` chunks to the workflow stream, and route handlers convert them to UI message chunks with `createModelCallToUIChunkTransform()` before returning the response:

```typescript title="workflows/ai-assistant.ts" lineNumbers
import { WorkflowAgent, type ModelCallStreamPart } from "@ai-sdk/workflow";
import { tool } from "ai";
import { getWritable } from "workflow";
import { z } from "zod";

async function searchFlights({ query }: { query: string }) {
  "use step";

  // ... search logic ...
  return { flights: [/* results */] };
}

export async function aiAssistantWorkflow(userMessage: string) {
  "use workflow";

  const agent = new WorkflowAgent({
    model: "anthropic/claude-haiku-4.5",
    instructions: "You are a helpful flight assistant.",
    tools: {
      searchFlights: tool({
        description: "Search for flights",
        inputSchema: z.object({ query: z.string() }),
        execute: searchFlights,
      }),
    },
  });

  // LLM response will be streamed to the run's writable
  await agent.stream({
    messages: [{ role: "user", content: userMessage }],
    writable: getWritable<ModelCallStreamPart>(), // [!code highlight]
  });
}
```

```typescript title="app/api/ai-assistant/route.ts" lineNumbers
import { createModelCallToUIChunkTransform } from "@ai-sdk/workflow";
import { createUIMessageStreamResponse } from "ai";
import { start } from "workflow/api";
import { aiAssistantWorkflow } from "./workflows/ai";

export async function POST(request: Request) {
  const { message } = await request.json();

  const run = await start(aiAssistantWorkflow, [message]);

  return createUIMessageStreamResponse({
    stream: run.readable.pipeThrough(createModelCallToUIChunkTransform()), // [!code highlight]
  });
}
```

<Callout type="info">
For the full agent API and migration notes, see the [`WorkflowAgent` documentation](https://ai-sdk.dev/v7/docs/agents/workflow-agent#workflowagent).
</Callout>

</LanguageContent>
<LanguageContent value="py">

`WorkflowAgent` and `createModelCallToUIChunkTransform()` are TypeScript AI SDK integrations. In Python, call your model provider inside a step and forward its async stream to the run's writable:

```python title="app/workflows/ai_assistant.py" lineNumbers
from app.workflow import wf
from vercel.workflow import get_writable

@wf.step
async def stream_model_response(prompt: str):
    writable = get_writable()
    async for chunk in model.stream(prompt):
        await writable.write(chunk)
    await writable.close()

@wf.workflow
async def ai_assistant_workflow(prompt: str):
    await stream_model_response(prompt)
```

</LanguageContent>

### Streaming between steps

<LanguageContent value="ts">

One step produces a stream and another step consumes it:

```typescript title="workflows/stream-pipeline.ts" lineNumbers
export async function streamPipelineWorkflow() {
  "use workflow";

  // Streams can be passed between steps
  const stream = await generateData(); // [!code highlight]
  const results = await consumeData(stream); // [!code highlight]

  return { count: results.length };
}

async function generateData(): Promise<ReadableStream<number>> {
  "use step";

  // Producer step creates a stream
  return new ReadableStream<number>({
    start(controller) {
      for (let i = 0; i < 10; i++) {
        controller.enqueue(i);
      }
      controller.close();
    }
  });
}

async function consumeData(readable: ReadableStream<number>) {
  "use step";

  // Consumer step reads from the stream
  const values: number[] = [];
  for await (const value of readable) {
    values.push(value);
  }
  return values;
}
```

</LanguageContent>
<LanguageContent value="py">

Python does not serialize arbitrary async iterables returned by a step, so a producer step cannot return a live stream to a consumer step. Return a materialized serializable value, use external storage for large intermediates, or have producer steps write to a shared `WorkflowWritable` output handle.

</LanguageContent>

### Processing large files without memory overhead

<LanguageContent value="ts">

Process large files by streaming chunks through transformation steps:

```typescript title="workflows/file-processing.ts" lineNumbers
export async function fileProcessingWorkflow(fileUrl: string) {
  "use workflow";

  // Chain streams through multiple processing steps
  const rawStream = await downloadFile(fileUrl); // [!code highlight]
  const processedStream = await transformData(rawStream); // [!code highlight]
  await uploadResult(processedStream); // [!code highlight]
}

async function downloadFile(url: string): Promise<ReadableStream<Uint8Array>> {
  "use step";
  const response = await fetch(url);
  return response.body!;
}

async function transformData(input: ReadableStream<Uint8Array>): Promise<ReadableStream<Uint8Array>> {
  "use step";

  // Transform stream chunks without loading entire file into memory
  return input.pipeThrough(new TransformStream<Uint8Array, Uint8Array>({
    transform(chunk, controller) {
      // Process each chunk individually
      controller.enqueue(chunk);
    }
  }));
}

async function uploadResult(stream: ReadableStream<Uint8Array>) {
  "use step";
  await fetch("https://storage.example.com/upload", {
    method: "POST",
    body: stream,
  });
}
```

</LanguageContent>
<LanguageContent value="py">

Because arbitrary input and return streams are not serializable in Python, keep a large file's download, transformation, and upload inside one step so the bytes do not cross a workflow boundary. Alternatively, store each intermediate externally and return only its URL or object key.

</LanguageContent>

## Best practices

<LanguageContent value="ts">

**Batching and first-chunk latency:**

Writes are flushed immediately by default. The leading chunk of an idle stream dispatches as soon as it is written, and chunks arriving while a flush is in flight coalesce into the next batch. If you write bursts of many tiny chunks and prefer fewer round trips over first-chunk latency, set a group-commit window with the World's `streamFlushIntervalMs` option or the `WORKFLOW_STREAM_FLUSH_INTERVAL_MS` environment variable. See [Worlds configuration](/docs/configuration/worlds#streamflushintervalms).

**Release locks properly:**

```typescript lineNumbers
const writer = writable.getWriter();
try {
  await writer.write(data);
} finally {
  writer.releaseLock(); // Always release
}
```

<Callout type="info">
Stream locks acquired in a step only apply within that step, not across other steps. This enables multiple writers to write to the same stream concurrently.
</Callout>

<Callout type="warn">
If a lock is not released, the invocation that ran the step cannot terminate. Even though the step returns and the workflow continues, the underlying request remains active until it times out and wastes compute resources.
</Callout>

**Close streams when done:**

```typescript lineNumbers
import { getWritable } from "workflow";

async function finalizeStream() {
  "use step";

  await getWritable().close(); // Signal completion
}
```

Streams are automatically closed when the workflow run completes, but explicitly closing them signals completion to consumers earlier.

**Use typed streams for type safety:**

{/* @skip-typecheck: incomplete code sample */}
```typescript lineNumbers
const writable = getWritable<MyDataType>();
const writer = writable.getWriter();
await writer.write({ /* typed data */ });
```

</LanguageContent>
<LanguageContent value="py">

**Drain when a chunk must be durable immediately.** `write()` buffers a chunk, and the step handler flushes all buffered writes before recording the step as complete. Call `await writable.drain()` when another system must see the data before the step returns.

**Close every stream explicitly.** Python does not close streams when a step or run completes. Close the stream from the final writing step, or use an async context manager on the clean path:

```python lineNumbers
from app.workflow import wf
from vercel.workflow import get_writable

@wf.step
async def finalize_stream():
    async with get_writable() as writable:
        await writable.write({"status": "complete"})
```

If the context exits with an exception, it leaves the stream open so a retry can continue. A closed stream cannot be reopened.

**Make chunks idempotent.** A failed step may already have flushed some chunks, and its retry writes them again. Include stable identifiers or sequence numbers when consumers need to deduplicate output.

</LanguageContent>

## Stream failures

<LanguageContent value="ts">

When a step returns a stream, the step is considered successful once it returns, even if the stream later encounters an error. The workflow won't automatically retry the step. The consumer of the stream must handle errors gracefully. For more on retry behavior, see [Errors and Retries](/docs/foundations/errors-and-retries).

```typescript title="workflows/stream-error-handling.ts" lineNumbers
import { FatalError } from "workflow";

async function produceStream(): Promise<ReadableStream<number>> {
  "use step";

  // Step succeeds once it returns the stream
  return new ReadableStream<number>({
    start(controller) {
      controller.enqueue(1);
      controller.enqueue(2);
      // Error occurs after step has completed // [!code highlight]
      controller.error(new Error("Stream failed")); // [!code highlight]
    }
  });
}

async function consumeStream(stream: ReadableStream<number>) {
  "use step";

  try { // [!code highlight]
    for await (const value of stream) {
      console.log(value);
    }
  } catch (error) { // [!code highlight]
    // Retrying won't help since the stream is already errored // [!code highlight]
    throw new FatalError("Stream failed"); // [!code highlight]
  } // [!code highlight]
}

export async function streamErrorWorkflow() {
  "use workflow";

  const stream = await produceStream(); // Step succeeds // [!code highlight]
  await consumeStream(stream); // Consumer handles errors // [!code highlight]
}
```

<Callout type="info">
Stream errors don't trigger automatic retries for the producer step. Design your stream consumers to handle errors. Because the stream is already in an errored state, retrying the consumer won't help. Use `FatalError` to fail the workflow immediately.
</Callout>

</LanguageContent>
<LanguageContent value="py">

Python output is written by a step rather than returned as a live stream. If that step fails, its normal retry policy applies, but chunks already flushed remain visible and the retry can write them again. Make chunks idempotent, or raise `FatalError` when retrying cannot safely reproduce the stream:

```python title="app/workflows/stream_error_handling.py" lineNumbers
from app.workflow import wf
from vercel.workflow import FatalError, get_writable

@wf.step
async def produce_output():
    writable = get_writable()
    try:
        async for chunk in source():
            await writable.write(chunk)
    except Exception as error:
        raise FatalError("Stream production failed") from error
```

Close the stream only after the final successful write. Leaving it open on failure lets a retry continue producing output.

</LanguageContent>

## Related documentation

<LanguageContent value="ts">

- [`getWritable()` API reference](/docs/api-reference/workflow/get-writable): Get the workflow's writable stream
- [`sleep()` API reference](/docs/api-reference/workflow/sleep): Pause workflow execution for a duration
- [`start()` API reference](/docs/api-reference/workflow-api/start): Start workflows and access the `Run` object
- [`getRun()` API reference](/docs/api-reference/workflow-api/get-run): Retrieve runs and their streams later
- [`world.streams`](/docs/api-reference/workflow-runtime/world/streams): Use low-level stream read, write, and close operations through the World SDK
- [`WorkflowAgent`](https://ai-sdk.dev/v7/docs/agents/workflow-agent#workflowagent): Build AI agents with durable, resumable streaming support

</LanguageContent>

<LanguageContent value="py">

- [`get_writable()` API reference](/docs/api-reference/python/get-writable): Create and write to default or namespaced durable streams
- [`sleep()` API reference](/docs/api-reference/python/sleep): Pause workflow execution for a duration
- [`start()` API reference](/docs/api-reference/python/start): Start a workflow and obtain its `Run`
- [`Run` API reference](/docs/api-reference/python/run): Retrieve runs and their streams later

</LanguageContent>

- [Errors and retries](/docs/foundations/errors-and-retries): Understand error handling and retry behavior
- [Serialization](/docs/foundations/serialization): Understand which data types you can pass in workflows
- [Workflows and steps](/docs/foundations/workflows-and-steps): Learn the core concepts of workflow execution
